tests/interpreter/errors/cast_missing_field.mochi
type Todo {
  title: string
}

let todo = {"name": "bob"} as Todo
